# selenium-browserkit

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: data.txt  main_class.py  main_def.py
selenium_browserkit/: __init__.py  browser.py  node.py
selenium_browserkit/utils/: __init__.py  browser_helper.py  core.py
